# vector-librarian-llm-hackaton

./: .gitignore  pyproject.toml  requirements.txt
.streamlit/: secrets.toml
vector-librarian/: Information.py
vector_librarian/: Information.py  client.py  common.py
vector_librarian/backend/: backend.py  chatbot.py  ingestion.py  medic.py  retrieval.py  vector_db.py
vector_librarian/pages/: 1_Ingestion.py  1_Reader.py  2_Ingestion.py  2_Retrieval.py  BOL.py  chatbot.py  frontend.py  medical.py
