[tool.poetry]
name = "vector-librarian"
version = "0.1.0"
description = ""
authors = ["zilto"]
readme = "README.md"
packages = [{include = "vector_librarian"}]

[tool.poetry.dependencies]
python = "^3.10"
arxiv = "^1.4.8"
pypdf = "^3.16.0"
tiktoken = "^0.5.1"
streamlit = "^1.26.0"
weaviate-client = "^3.24.1"
sf-hamilton = "^1.28.0"
pyzotero = "^1.5.10"
trulens = "0.20.0"
chromadb = "0.4.18" 
openai = "1.3.7"
pymed = "0.8.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
